--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ Zadanie/Zadanie/obj/Debug/net5.0/Razor/Views/Form/Created.cshtml.g.cs
 Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.Views.dll
 Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.Views.pdb
 Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.dll
+Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.RazorAssemblyInfo.cs
+Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.GeneratedMSBuildEditorConfig.editorconfig
+Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.AssemblyInfoInputs.cache
+Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.AssemblyInfo.cs
+Zadanie/Zadanie/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+Zadanie/Zadanie/obj/Debug/net5.0/Zadanie.RazorAssemblyInfo.cache
